# advanced-image-classification

./: .gitignore  README.md
development/: Makefile  README.md  prod.pyproject.toml  pyproject.toml
development/config/: config_helper.py  nginx.conf
development/src/: main.py
development/src/controllers/: image.py
development/src/schemas/: image_schema.py
development/src/services/: image_service.py
development/src/utils/: app_utils.py
development/vision/: __init__.py
development/vision/trained_models/: architecture.py  class_labels.json
src/: main.py
src/schemas/: image_schema.py
vision/: __init__.py
vision/trained_models/: architecture.py
